# KaizerBackend

./: .env.example  .gitignore  CHANGELOG.md  DEV.md  asset_resolver.py  auth.py  ch.json  config.py  crypto.py  database.py  docker-compose.dev.yml  docker-compose.postiz.yml  gemini_cache.py  kaizer.db  languages.py  main.py  manage.py  models.py  nixpacks.toml  pytest.ini  railpack.toml  railway.toml  rate_limit.py  redis_queue.py  requirements-deploy.txt  requirements-railway.txt  requirements.txt  runner.py  storage_migration.py  system_observer.py  system_settings.py  tracing.py
pipeline_v2/: .env.example  README.md  RUNBOOK.md  conftest.py  post_v2_backlog.md  pyproject.toml  step12_completion_summary.md
pipeline_v2/docs/: ARCHITECTURE_RESEARCH.md
pipeline_v2/pipeline_v2/: __init__.py  bulletin_crossfade_stitcher.py  editor_meta_adapter.py  inngest_app.py  inngest_client.py  llm.py  models.py  orchestrator.py  storage.py  transitions.py
pipeline_v2/research_progress/: STATUS.md
pipeline_v2/research_scripts/: bench_concat_drift.py  bench_filter_complex.py  bench_nvenc_concurrent.py
pipeline_v2/scripts/: diag_latest_v2_job.py  diag_search_personal.py  drift_measure.py  drift_measure_v2.py  inspect_job44_spots.py  job42_phrase_retake_check.py  job42_phrase_retake_result.json  job44_partial_restart_check.py  job44_partial_restart_result.json  preflight_v2_launch.py  step2_smoketest.py  step3_smoketest.py  step4_1_chirp3_probe.py  step4_2_whisper_groq_probe.py  step4_5_sarvam_probe.py  step4_6_compare_providers.py  step4_diagnose.py  step4_smoketest.py  step5_0_v1_regression.py  verify_item111_job46.py
pipeline_v2/tests/: test_bulletin_crossfade_stitcher.py  test_clean_transcript.py  test_e2e_v2_cancel_12_3.py  test_e2e_v2_idempotency_12_4.py  test_e2e_v2_inngest.py  test_e2e_v2_pipeline.py  test_editor_meta_adapter.py  test_editor_meta_byte_comparison.py  test_edl_builder.py  test_item117_phase5_integration.py  test_models_stage2.py  test_models_stage2_5.py  test_models_stage3.py  test_orchestrator.py  test_orchestrator_e2e.py  test_preflight_v2_launch.py  test_stage_0.py  test_stage_1.py  test_stage_2_5_entity_canonicalizer.py  test_stage_2_continuity.py  test_stage_2_providers.py  test_stage_3_fanout.py  test_stage_3a_shorts.py  test_stage_3b_metadata.py  test_stage_3c_image_plan.py  test_stage_4_bulletin_overlay.py  test_stage_4_image_source.py  test_stage_4_raw_extract.py  test_stage_4_render.py  test_stage_4_render_integration.py  (+7 more)
(+314 files in other folders)
